SET(MAZE_SOURCES
	main.cpp
)

FIND_PACKAGE(Lua 5.2 REQUIRED)

INCLUDE_DIRECTORIES(
	${LUA_INCLUDE_DIR}
)

ADD_EXECUTABLE(maze ${MAZE_SOURCES})

TARGET_LINK_LIBRARIES(maze
	luagame
)

ADD_TEST(NAME maze.dfs
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
	COMMAND maze files/dfs.lua)

ADD_TEST(NAME maze.stay
	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
	COMMAND maze files/stay.lua)

SET_TESTS_PROPERTIES(maze.stay PROPERTIES
	TIMEOUT 3
	PASS_REGULAR_EXPRESSION "Test timed out"
)
