SET(MAZE_SOURCES
	main.cpp
)

FIND_PACKAGE(Lua 5.2 REQUIRED)

INCLUDE_DIRECTORIES(
	${LUA_INCLUDE_DIR}
)

ADD_EXECUTABLE(maze ${MAZE_SOURCES})

TARGET_LINK_LIBRARIES(maze
	luagame
)

ADD_CUSTOM_COMMAND(
	TARGET maze
	POST_BUILD
	COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/files
		$<TARGET_FILE_DIR:maze>/files
	DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/files/*")

ADD_TEST(NAME maze.dfs
	COMMAND maze files/dfs.lua)

ADD_TEST(NAME maze.stay
	COMMAND maze files/stay.lua)

SET_TESTS_PROPERTIES(maze.stay PROPERTIES
	TIMEOUT 3
	PASS_REGULAR_EXPRESSION "Test timed out"
)
